// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deposit into existing position: depositBase 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 131215,
}
`;

exports[`Deposit into existing position: depositQuote 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 131389,
}
`;

exports[`Liquidation liquidate long position and create new long position 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 266749,
}
`;

exports[`Liquidation liquidate long position and create new position 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 294405,
}
`;

exports[`Liquidation liquidate short position and create new position 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 307776,
}
`;

exports[`Liquidation liquidate short position and create new short position 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 282812,
}
`;

exports[`Open position: depositBase 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 212542,
}
`;

exports[`Open position: depositQuote 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 212688,
}
`;

exports[`System initialized: closePosition 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 234455,
}
`;

exports[`System initialized: depositBase 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 211372,
}
`;

exports[`System initialized: depositBase and long 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 363990,
}
`;

exports[`System initialized: depositQuote 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 211473,
}
`;

exports[`System initialized: depositQuote and short 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 342888,
}
`;

exports[`System initialized: long 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 305775,
}
`;

exports[`System initialized: short 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 284511,
}
`;

exports[`System initialized: withdrawBase 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 181083,
}
`;

exports[`System initialized: withdrawQuote 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 189500,
}
`;

exports[`mc happens: MC long position with deleverage 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 238582,
}
`;

exports[`mc happens: MC long reinit 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 205215,
}
`;

exports[`mc happens: MC short position with deleverage 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 238650,
}
`;

exports[`mc happens: MC short reinit 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 205168,
}
`;

exports[`mc happens: closePosition with two mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 372274,
}
`;

exports[`mc happens: depositBase with one mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 257892,
}
`;

exports[`mc happens: depositBase with two mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 357072,
}
`;

exports[`mc happens: depositQuote with one mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 248866,
}
`;

exports[`mc happens: depositQuote with two mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 287149,
}
`;

exports[`mc happens: long closePosition with one mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 262712,
}
`;

exports[`mc happens: long initialized heap with one mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 288396,
}
`;

exports[`mc happens: long with one mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 365596,
}
`;

exports[`mc happens: long with two mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 386440,
}
`;

exports[`mc happens: short with one mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 333773,
}
`;

exports[`mc happens: short with two mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 382021,
}
`;
